# rusty-bridge

./: .gitignore  Cargo.toml  build.bat  firewall.bat  readme.md
configs/: log_cfg.yml
src/: main.rs  vts.rs
ui/: Cargo.toml  embed_resources.rc  rusty-bridge-ui.exe.manifest
ui/src/: main.rs
vts/: Cargo.toml
vts/src/: lib.rs  vtspc.rs  vtsphone.rs
