[package]
name = "rusty-bridge"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evalexpr = "11.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tungstenite = "0.21.0"
