[package]
name = "rusty-bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "ui", "vts",
]

[dependencies]
rusty-bridge-lib = { path = "./vts" }
clap = { version = "4.5.16", features = ["derive"] }
evalexpr = "11.3.0"
log = "0.4.22"
log4rs = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
tungstenite = "0.24.0"
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.3"